# kp-NeuralNetwork

./: .gitignore  CMakeLists.txt  README.md
include/: Activation.h  Builder.h  ConsoleApp.h  Layer.h  Loss.h  MNISTLoader.h  NeuralNetwork.h  Optimizer.h
scr/: Activation.cpp  Builder.cpp  ConsoleApp.cpp  Layer.cpp  Loss.cpp  MNISTLoader.cpp  NeuralNetwork.cpp  Optimizer.cpp  main.cpp
